--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,31 +6,36 @@ Licence: Free to use under our free template licence terms
 Licence URI: https://www.os-templates.com/template-terms
 -->
 
-<div class="wrapper row1">
+<div class="wrapper row-white">
   <header id="header" class="hoc clear" style="padding: 10px 0px;"> 
-    <a href="index.html">
-		<img src="images/demo/protut.png" alt="Logo da Protut" style="max-height: 80px;">
+    <a href="./index.html">
+		<img src="./images/protut.png" alt="Logo da Protut" style="max-height: 80px;">
     </a>
   </header>
 </div>
 
-<div class="wrapper row4">
+<div class="wrapper row-dark-gray">
   <nav id="mainav" class="hoc clear"> 
     <ul class="clear">
-      <li><a href="index.html">Página inicial</a></li>
+      <li><a href="./index.html">Página inicial</a></li>
       <li><a href="./servicos.html">Serviços</a></li>
       <li><a href="./processo-seletivo.html">Processo Seletivo</a></li>
       <li><a class="drop" href="#">Sobre nós</a>
         <ul>
           <li><a href="./quem-somos.html">Quem somos</a></li>                    
-          <li><a href="./movimento-empresa-junior.html">Movimento Empresa Júnior</a></li>
+          <li><a href="./mej.html">Movimento Empresa Júnior</a></li>
           <li><a href="./faq.html">Perguntas Frequentes</a></li>    
         </ul>
       </li>      
       <li><a class="nav-emphasys hover-zoom" href="./contato.html">Contato</a></li>
     </ul>
+    <form action="#">
+      <select id="mobilemenu" onchange="goToPage(this.value);">
+        <option selected="selected">MENU</option>
+      </select>
+    </form>
   </nav>
 </div>
 
 <!-- Enable mobile menu -->
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+<script src="./js/mobilemenu.js" defer></script>
