Escrita a página de Processo Seletivo

--- a/css/layout.css
+++ b/css/layout.css
@@ -213,7 +213,7 @@ td{border-width:0 1px;}
 --------------------------------------------------------------------------------------------------------------- */
 body{color:#CBCBCB; background-color:#4A4E57;}
 a{color:#E43F21;}
-a:active, a:focus{background:transparent;}/* IE10 + 11 Bugfix - prevents grey background */
+a.btn:active, a.btn:focus{background:transparent;}/* IE10 + 11 Bugfix - prevents grey background */
 hr, .borderedbox{border-color:#D7D7D7;}
 label span{color:#FF0000; background-color:inherit;}
 input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
