--- a/css/protut.css
+++ b/css/protut.css
@@ -10,7 +10,7 @@
 #breadcrumb {padding-top: 30px; color: #FFFFFF;}
 
 .red-gradient {background: linear-gradient(180deg, #9D2E19, #C6422B);}
-.green-gradient {background: linear-gradient(180deg, #1C8048, #1F9454);}
+.green-gradient {background: linear-gradient(180deg, #197341, #1F9454);}
 .blue-gradient {background: linear-gradient(180deg, #184B78, #20629B);}
 .purple-gradient {background: linear-gradient(180deg, #640C3F, #8E146E);}
 .orange-gradient {background: linear-gradient(180deg, #B9470F, #C66F22);}
@@ -45,7 +45,11 @@ h6 {font-size: 1rem;}
 .shadow {box-shadow: #171515;}
 .shadow-text {text-shadow: 1px 1px 10px #313131;}
 
+.content {margin-bottom: 4rem;}
+.content a {display: block;}
+
 .justify {text-align: justify;}
+.jusp p {text-align: justify;}
 
 /* Backgrounds
 --------------------------------------------------------------------------------------------------------------- */
