Criado formulário na página de Contato

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,13 +5,15 @@ Author URI: https://www.os-templates.com/
 Licence: Free to use under our free template licence terms
 Licence URI: https://www.os-templates.com/template-terms
 -->
+<link rel="stylesheet" href="../css/layout.css">
+<link rel="stylesheet" href="../css/protut.css">
 
 <div class="wrapper row4">
   <footer id="footer" class="hoc clear"> 
     
     <div class="one_half first">
       <h6 class="heading">Contato</h6>
-      <ul class="nospace btmspace-30 linklist contact">
+      <ul class="nospace btmspace-30 linklist contact">        
         <li><i class="fa fa-map-marker"></i>
           <address>
             UTFPR campus Ponta Grossa - Praça do Bloco C<br>
@@ -19,8 +21,8 @@ Licence URI: https://www.os-templates.com/template-terms
           </address>
         </li>
         <li><i class="fa fa-phone"></i> (42) 9 0000 0000</li>
-        <li><i class="fa fa-envelope-o"></i> contato.protut@gmail.com</li>
-        <li><a href="./contato.html">Mais informações de contato &raquo;</a></li>
+        <li><i class="fa fa-envelope-o"></i> comercial.protut@gmail.com</li>        
+        <li style="padding: 0;"><a class="nav-emphasys hover-zoom" style="margin: auto; display: inline-block; text-align: center;" href="./contato.html">Mandar mensagem online &raquo;</a></li>
       </ul>
     </div>
     
