--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,15 +5,17 @@ Author URI: https://www.os-templates.com/
 Licence: Free to use under our free template licence terms
 Licence URI: https://www.os-templates.com/template-terms
 -->
+<!--
 <link rel="stylesheet" href="../css/layout.css">
 <link rel="stylesheet" href="../css/protut.css">
+-->
 
-<div class="wrapper row4">
+<div class="wrapper row-dark-gray">
   <footer id="footer" class="hoc clear"> 
     
     <div class="one_half first">
       <h6 class="heading">Contato</h6>
-      <ul class="nospace btmspace-30 linklist contact">        
+      <ul class="nospace linklist contact">        
         <li><i class="fa fa-map-marker"></i>
           <address>
             UTFPR campus Ponta Grossa - Praça do Bloco C<br>
@@ -21,9 +23,12 @@ Licence URI: https://www.os-templates.com/template-terms
           </address>
         </li>
         <li><i class="fa fa-phone"></i> (42) 9 0000 0000</li>
-        <li><i class="fa fa-envelope-o"></i> comercial.protut@gmail.com</li>        
-        <li style="padding: 0;"><a class="nav-emphasys hover-zoom" style="margin: auto; display: inline-block; text-align: center;" href="./contato.html">Mandar mensagem online &raquo;</a></li>
+        <li><i class="fa fa-envelope-o"></i> comercial.protut@gmail.com</li>               
+        <li></li>
       </ul>
+      <div id="contact-btn-container">
+		<a class="btn-rounded hover-zoom" href="./contato.html">Mandar mensagem online &raquo;</a>
+      </div>
     </div>
     
     <div class="one_half">
@@ -54,11 +59,9 @@ Licence URI: https://www.os-templates.com/template-terms
   </footer>
 </div>
 
-<div class="wrapper row5">
+<div class="wrapper row-footer">
   <div id="copyright" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2022 - Todos os direitos reservados - <a href="#">Protut Soluções em Energia</a></p>
+    <p class="fl_left">Copyright &copy; 2022 - Todos os direitos reservados - <a href="./index.html">Protut Soluções em Energia</a></p>
     <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <!-- ################################################################################################ -->
   </div>
 </div>
