--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,8 +60,9 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 
 <div class="wrapper row-footer">
-  <div id="copyright" class="hoc clear"> 
-    <p class="fl_left">Copyright &copy; 2022 - Todos os direitos reservados - <a href="./index.html">Protut Soluções em Energia</a></p>
+  <div id="copyright" class="hoc clear">
+    <p class="fl_left">Copyright &copy; <span id="year">2022</span> - Todos os direitos reservados - <a href="./index.html">Protut Soluções em Energia</a></p>
     <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
   </div>
 </div>
