Atualizadas as informações de contato

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@ Author URI: https://www.os-templates.com/
 Licence: Free to use under our free template licence terms
 Licence URI: https://www.os-templates.com/template-terms
 -->
+
 <!--
 <link rel="stylesheet" href="../css/layout.css">
 <link rel="stylesheet" href="../css/protut.css">
@@ -18,12 +19,12 @@ Licence URI: https://www.os-templates.com/template-terms
       <ul class="nospace linklist contact">        
         <li><i class="fa fa-map-marker"></i>
           <address>
-            UTFPR campus Ponta Grossa - Praça do Bloco C<br>
+            UTFPR campus Ponta Grossa - Bloco C, sala C-012A.<br>
             Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa – PR	
           </address>
-        </li>
-        <li><i class="fa fa-phone"></i> (42) 9 0000 0000</li>
-        <li><i class="fa fa-envelope-o"></i> comercial.protut@gmail.com</li>               
+        </li>        
+        <li><i class="fa fa-envelope-o"></i> comercial.protut@gmail.com</li>
+        <li><i class="fa fa-telegram"></i> Telegram: @protutjr</li>
         <li></li>
       </ul>
       <div id="contact-btn-container">
