Correções de bugs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </ul>
     <form action="#">
       <select id="mobilemenu" onchange="goToPage(this.value);">
-        <option>MENU</option>
+        <option value="#">MENU</option>
       </select>
     </form>
   </nav>
