Atualizados logotipos e página 404

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,15 @@ Licence: Free to use under our free template licence terms
 Licence URI: https://www.os-templates.com/template-terms
 -->
 
+
+<link rel="stylesheet" href="../css/layout.css">
+<link rel="stylesheet" href="../css/protut.css">
+
+
 <div class="wrapper row-white">
   <header id="header" class="hoc clear" style="padding: 10px 0px;"> 
     <a href="./index.html">
-		<img src="./images/protut.png" alt="Logo da Protut" style="max-height: 80px;">
+		<img id="site-logo" src="./images/protut.svg" alt="Logo da Protut">
     </a>
   </header>
 </div>
