--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <div class="wrapper row-white">
   <header id="header" class="hoc clear" style="padding: 10px 0px;"> 
     <a href="./index.html">
-		<img id="site-logo" src="./images/protut.svg" alt="Logo da Protut">
+		<img id="site-logo" src="./images/protut_natal.svg" alt="Logo da Protut">
     </a>
   </header>
 </div>
