Evoluindo o site através de melhora mentos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,8 +53,8 @@ Licence URI: https://www.os-templates.com/template-terms
           </a>
 		    </li>
         <li>
-          <a class="btn-social btn-github" href="https://github.com/protutjr" target="_blank">
-            <span><i class="fa fa-github"></i>&nbsp; GitHub</span>
+          <a class="btn-social btn-blog" href="https://protutjr.blogspot.com" target="_blank">
+            <span><i class="fa fa-newspaper-o"></i>&nbsp; Blog</span>
           </a>
 		    </li>
       </ul>     
