--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,15 +6,15 @@ Licence: Free to use under our free template licence terms
 Licence URI: https://www.os-templates.com/template-terms
 -->
 
-
+<!--
 <link rel="stylesheet" href="../css/layout.css">
 <link rel="stylesheet" href="../css/protut.css">
-
+-->
 
 <div class="wrapper row-white">
   <header id="header" class="hoc clear" style="padding: 10px 0px;"> 
     <a href="./index.html">
-		<img id="site-logo" src="./images/protut_natal.svg" alt="Logo da Protut">
+		<img id="site-logo" src="./images/protut.svg" alt="Logo da Protut">
     </a>
   </header>
 </div>
@@ -42,5 +42,7 @@ Licence URI: https://www.os-templates.com/template-terms
   </nav>
 </div>
 
-<!-- Enable mobile menu -->
+<!-- Ativar menu mobile -->
 <script src="./js/mobilemenu.js" defer></script>
+<!-- Logos temáticos do site -->
+<script src="./js/holidays.js" defer></script>
