--- a/css/protut.css
+++ b/css/protut.css
@@ -20,10 +20,10 @@
 .btn-social {display:block; height: 40px; width:100%; margin: 10px 4px; line-height:40px; font-size:20px; text-align:center;}
 .btn-social {color:#FFFFFF; background-color: #888888; font-family: "Open Sans", Roboto, Arial, Verdana, sans-serif;}
 .btn-social:hover {filter: brightness(120%);}
-.btn-facebook {background-color:#3B5998}
-.btn-blog {background-color:#DB4A39;}
-.btn-linkedin {background-color:#0E76A8;}
-.btn-instagram {background-color: #C13584;}
+.btn-facebook {background-color: #3B5998}
+.btn-blog {background-color: #534F4F;}
+.btn-linkedin {background-color: #0E76A8;}
+.btn-instagram {background-color: #A43C76;}
 .btn-github {background-color: #171515;}
 
 /* Layout geral
