--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,6 +43,6 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 
 <!-- Ativar menu mobile -->
-<script src="./js/mobilemenu.js" defer></script>
+<script src="./js/mobilemenu.js" async></script>
 <!-- Logos temáticos do site -->
 <script src="./js/holidays.js" defer></script>
