Terminado o site provisório...

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,13 +20,12 @@ Licence URI: https://www.os-templates.com/template-terms
         <li><i class="fa fa-map-marker"></i>
           <address>
             UTFPR campus Ponta Grossa - Bloco C, sala C-012A.<br>
-            Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa – PR	
+            Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa/PR
           </address>
         </li>        
-        <li><i class="fa fa-envelope-o"></i> comercial.protut@gmail.com</li>
-<!--
-        <li><i class="fa fa-telegram"></i> Telegram: @protutjr</li>
--->
+        <li><i class="fa fa-envelope-o"></i> contato.protut@gmail.com</li>
+        <li><i class="fa fa-whatsapp"></i> (42) 9 9935-1244 (Andressa)</li>
+        <li><i class="fa fa-whatsapp"></i> (46) 9 9900-8220 (Eliabe)</li>
         <li></li>
       </ul>
       <div id="contact-btn-container">
