Alterado o telefone do diretor de Projetos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>        
         <li><i class="fa fa-envelope-o"></i> contato.protut@gmail.com</li>
         <li><i class="fa fa-whatsapp"></i> (42) 9 9935-1244 (Andressa)</li>
-        <li><i class="fa fa-whatsapp"></i> (46) 9 9900-8220 (Eliabe)</li>
+        <li><i class="fa fa-whatsapp"></i> (43) 9 9800-7512 (Matheus)</li>
         <li></li>
       </ul>
       <div id="contact-btn-container">
