Atualizados os telefones para a gestão 2023

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,8 +24,8 @@ Licence URI: https://www.os-templates.com/template-terms
           </address>
         </li>        
         <li><i class="fa fa-envelope-o"></i> contato.protut@gmail.com</li>
-        <li><i class="fa fa-whatsapp"></i> (42) 9 9935-1244 (Andressa)</li>
-        <li><i class="fa fa-whatsapp"></i> (43) 9 9800-7512 (Matheus)</li>
+        <li><i class="fa fa-whatsapp"></i> (15) 99689-4445 (Celso)</li>
+        <li><i class="fa fa-whatsapp"></i> (42) 99926-1319 (Marcelo)</li>
         <li></li>
       </ul>
       <div id="contact-btn-container">
