Adicionado mecanismo anti-spam para os e-mails

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@ Licence URI: https://www.os-templates.com/template-terms
             Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa/PR
           </address>
         </li>        
-        <li><i class="fa fa-envelope-o"></i> contato.protut@gmail.com</li>
+        <li><i class="fa fa-envelope-o"></i> <span>contato.</span>protut<span>@gmail.com</span></li>
         <li><i class="fa fa-whatsapp"></i> (15) 99689-4445 (Celso)</li>
         <li><i class="fa fa-whatsapp"></i> (42) 99926-1319 (Marcelo)</li>
         <li></li>
