--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,19 +16,15 @@ Licence URI: https://www.os-templates.com/template-terms
     
     <div class="one_half first">
       <h6 class="heading">Contato</h6>
-      <ul class="nospace linklist contact">        
+      <ul id="contact-footer" class="nospace linklist contact">        
         <li><i class="fa fa-map-marker"></i>
           <address>
-            UTFPR campus Ponta Grossa - Bloco C, sala C-012A.<br>
+            UTFPR campus Ponta Grossa - Bloco A - piso inferior.<br>
             Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa/PR
           </address>
         </li>        
         <li><i class="fa fa-envelope-o"></i> <span>contato.</span>protut<span>@gmail.com</span></li>
-        <!-- Links de contato dos membros no WhatsApp -->
-		{% for contato in site.data.contatos %}
-			<li><i class="fa fa-whatsapp"></i> {{ contato.telefone_formatado }} ({{ contato.nome }})</li>			
-		{% endfor %}        
-        <li></li>
+        <!-- Links de contato dos membros no WhatsApp -->		
       </ul>
       <div id="contact-btn-container">
 		<a class="btn-rounded hover-zoom" href="./contato.html">Mandar mensagem online &raquo;</a>
@@ -53,11 +49,6 @@ Licence URI: https://www.os-templates.com/template-terms
             <span><i class="fa fa-linkedin"></i>&nbsp; LinkedIn</span>
           </a>
 		    </li>
-        <!--li>
-          <a class="btn-social btn-blog" href="https://protutjr.blogspot.com" target="_blank">
-            <span><i class="fa fa-newspaper-o"></i>&nbsp; Blog</span>
-          </a>
-		</li-->
       </ul>     
     </div>
   </footer>
@@ -68,5 +59,46 @@ Licence URI: https://www.os-templates.com/template-terms
     <p class="fl_left">Copyright &copy; <span id="year">2023</span> ― Todos os direitos reservados ― <a href="./index.html">Protut - Elétrica e Automação</a></p>
     <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
     <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
-  </div>
+  </div>  
 </div>
+
+<div id="cookies" style="position: sticky; bottom: 0px; z-index: 100; background: #F0F0F0; display: none;" class="wrapper row-white">
+	<div class="hoc clear" style="padding: 8px;">
+		<p class="fl_left" style="margin-right: 10px;">Este site utiliza cookies para melhorar a sua experiência de navegação e para estatísticas.</p>  
+		<a class="btn"  style="cursor: pointer; margin-top: 8px;" onclick="allowCookies();">Entendi</a>
+    </div>
+</div>
+
+<script>
+	if (!getCookie("cookies_allowed")) {
+		document.getElementById("cookies").style.display = "";
+	}
+	
+	function allowCookies() {
+		document.getElementById("cookies").style.display = "none";
+		setCookie("cookies_allowed", "true", 180);		
+	}
+	
+	function setCookie(cname, cvalue, exdays) {
+	  const d = new Date();
+	  d.setTime(d.getTime() + (exdays*24*60*60*1000));
+	  let expires = "expires="+ d.toUTCString();
+	  document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/;SameSite=Strict";
+	}
+	
+	function getCookie(cname) {
+	  let name = cname + "=";
+	  let decodedCookie = decodeURIComponent(document.cookie);
+	  let ca = decodedCookie.split(';');
+	  for(let i = 0; i <ca.length; i++) {
+		let c = ca[i];
+		while (c.charAt(0) == ' ') {
+		  c = c.substring(1);
+		}
+		if (c.indexOf(name) == 0) {
+		  return c.substring(name.length, c.length);
+		}
+	  }
+	  return "";
+	}	
+</script>
