--- a/_includes/tags_comuns.html
+++ b/_includes/tags_comuns.html
@@ -1,12 +1,12 @@
-<link rel="icon" href="./favicon.png" type="image/png">
+<link rel="icon" href="{{ "/favicon.png" | absolute_url }}" type="image/png">
 <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <!-- CSS -->
-<link href="./css/layout.css" rel="stylesheet" type="text/css" media="all">
-<link href="./css/protut.css" rel="stylesheet">
+<link href="{{ "/css/layout.css" | relative_url }}" rel="stylesheet" type="text/css" media="all">
+<link href="{{ "/css/protut.css" | relative_url }}" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 
 <!-- FONTES -->   
@@ -14,8 +14,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Overpass:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
 
 <!-- JAVASCRIPT -->
-<script src="./js/jquery.min.js"></script>
-<script src="./js/jquery.backtotop.js" defer></script>
+<script src="{{ "/js/jquery.min.js" | absolute_url }}"></script>
+<script src="{{ "/js/jquery.backtotop.js" | absolute_url }}" defer></script>
+<script src="{{ "/js/gpd_contatos.js" | absolute_url }}"></script>
+<script src="{{ "/js/gpd_integration.js" | absolute_url }}"></script>
+
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-099HR3NL2L"></script>
