--- a/_includes/tags_comuns.html
+++ b/_includes/tags_comuns.html
@@ -1,4 +1,4 @@
-<link rel="icon" href="{{ "/favicon.png" | absolute_url }}" type="image/png">
+<link rel="icon" href="{{ "/favicon.png" | relative_url }}" type="image/png">
 <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
 <meta charset="utf-8">
@@ -14,10 +14,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Overpass:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
 
 <!-- JAVASCRIPT -->
-<script src="{{ "/js/jquery.min.js" | absolute_url }}"></script>
-<script src="{{ "/js/jquery.backtotop.js" | absolute_url }}" defer></script>
-<script src="{{ "/js/gpd_contatos.js" | absolute_url }}"></script>
-<script src="{{ "/js/gpd_integration.js" | absolute_url }}"></script>
+<script src="{{ "/js/jquery.min.js" | relative_url }}"></script>
+<script src="{{ "/js/jquery.backtotop.js" | relative_url }}" defer></script>
+<script src="{{ "/js/gpd_contatos.js" | relative_url }}"></script>
+<script src="{{ "/js/gpd_integration.js" | relative_url }}"></script>
 
 
 <!-- Google tag (gtag.js) -->
