Update contact form - part 2

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,6 +62,11 @@ Licence URI: https://www.os-templates.com/template-terms
   </div>  
 </div>
 
+<div id="contact-float" style="position: fixed; bottom: 20px; right: 20px; z-index: 100; display: none;">
+	<button id="contact-float-btn" class="btn-orange" formsappId="6738041482617bff1d19e790"><i class="fa fa-envelope-o fa-2x"></i></button>
+	<span class="center">Enviar mensagem</span>
+</div>
+
 <div id="cookies" style="position: sticky; bottom: 0px; z-index: 100; background: #F0F0F0; display: none;" class="wrapper row-white">
 	<div class="hoc clear" style="padding: 8px;">
 		<p class="fl_left" style="margin-right: 10px;">Este site utiliza cookies para melhorar a sua experiência de navegação e para estatísticas.</p>  
